# kollektiv

Drinkmixer/src/: main.cpp
estimate_state/: datalog.csv  estimate_position.ipynb  plot.py
example_cpp_Erik/: CMakeLists.txt
example_cpp_Erik/include/: example.hpp
example_cpp_Erik/src/: example.cpp  main.cpp
